style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  background: #17181a;
  font-family: "Montserrat", sans-serif;
  overflow-x: hidden;
}

#logo {
  color: white;
  font-family: "Abril Fatface";
}

.nav-header {
  min-height: 10vh;
  width: 80%;
  margin: auto;
  padding: 2rem 0rem;
  font-size: 1rem;
  display: flex;
  align-items: center;
  justify-content: space-between;
  z-index: 2;
}

.line1,
.line2 {
  width: 3rem;
  height: 0.2rem;
  margin: 0.4rem;
  background: white;
  pointer-events: none;
}

.slide {
  min-height: 100vh;
  margin: 0 auto 0 auto;
  width: 80%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  color: white;
  background: #17181a;
  
}

.hero-desc {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding-left: 5rem;
  flex: 1;
  position: relative;
  flex-basis: 25rem;
  overflow: hidden;
}

.hero-img {
  position: relative;
  flex: 1;
  flex-basis: 25rem;
  overflow: hidden;
  border-radius: 10px;
}

.hero-img img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  
}

.span1 {
  color: rgb(192, 98, 74);
}

.span2 {
  color: rgb(238, 173, 98);
}

.span3 {
  color: rgb(202, 194, 79);
}

.hero-desc h2 {
  font-family: "Abril Fatface";
  font-size: 4rem;
}
.hero-desc p {
  padding: 2rem 0rem;
  color: rgb(180, 173, 173);
  font-size: 1.5rem;
}

.explore {
  padding: 1rem 2rem;
  background: none;
  border: 1px solid white;
  font-size: 1rem;
  border-radius: 10px;
  text-decoration: none;
  align-self: flex-start;
  cursor: pointer;
}

.nav-bar {
  position: fixed;
  display: flex;
  background: white;
  align-items: center;
  justify-content: space-around;
  width: 100%;
  height: 100%;
  top: 0%;
  bottom: 0%;
  z-index: 1;
  opacity: 1;
  clip-path: circle(50px at 100% -10%);
  -webkit-clip-path: circle(50px at 100% -10%);
}
.burger {
  cursor: pointer;
}
.nav-links {
  font-size: 2.5rem;
  flex-basis: 30rem;
}
.nav-links h3 {
  padding: 2rem 0rem;
}
.contact {
  flex-basis: 30rem;
}
.contact h2 {
  font-size: 2.5rem;
  padding: 2rem 0rem;
}
.contact p {
  font-size: 1.5rem;
  line-height: 2rem;
}

.reveal-img,
.reveal-text {
  background: #17181a;
  position: absolute;
  width: 100%;
  height: 110%;
  top: -10%;
  left: 0;

}

.cursor {
  width: 3rem;
  height: 3rem;
  border: 2px solid white;
  border-radius: 50%;
  position: absolute;
  transform: translate(-50%, -50%);
  pointer-events: none;
  transition: all 0.5s ease-in-out;
  transition-property: background, transform;
  transform-origin: 75% 75%;
}
.cursor.activeHover{
  
  background: rgb(117, 152, 216);
  transform: scale(3);
}
.cursor.activeExp{
  background: white;
  transform: scale(3);
}
.scrollmagic-pin-spacer {
  position: static !important;
}
.cursor-text{
  position: absolute;
  font-size: 0.6rem;
  top: 40%;
  left: 50%;
  transform: translate(-50%,-50%);
}
.title{
  position: relative;
  overflow: hidden;

}
.title-swipe {
  width: 100%;
  height: 100%;
  top: 0;
  position: absolute;
  mix-blend-mode: darken;
  transform: translateY(100%);
}
.t-swipe1{
  background-color: rgb(192, 98, 74);
}
.t-swipe2{
  background-color: rgb(238, 173, 98);
}
.t-swipe3{
  background-color: rgb(202, 194, 79);
}

